2004-10-12  Tom Tromey  <tromey@redhat.com>

	* prims.cc: Don't include FirstThread.h.

2004-10-06  Tom Tromey  <tromey@redhat.com>

	* link.cc (ensure_method_table_complete): Ensure superclass
	Miranda methods installed.

2004-10-04  Loren J. Rittle  <ljrittle@acm.org>

	* configure.ac (*-*-freebsd[[1234]]*): Refine error message
	emission rule.
	* configure: Rebuilt.

2004-09-30  Tom Tromey  <tromey@redhat.com>

	* java/text/MessageFormat.java (Field): Constructor now
	protected.

2004-09-30  Tom Tromey  <tromey@redhat.com>

	* javax/crypto/MacSpi.java: Fixed typo.

2004-09-30  Michael Koch  <konqueror@gmx.de>

	* java/net/InetAddress.java: Reformatted.
	(loopback): Initialize with Inet4Address object.
	(static): Initialize ANY_IF with Inet4Address object.
	(InetAddress): Removed unused package-private constructor.

2004-09-30  Michael Koch  <konqueror@gmx.de>

	* java/beans/Beans.java,
	java/beans/EventHandler.java,
	java/beans/EventSetDescriptor.java,
	java/beans/Introspector.java,
	java/beans/PropertyEditorManager.java,
	java/beans/beancontext/BeanContext.java,
	java/beans/beancontext/BeanContextChild.java,
	java/beans/beancontext/BeanContextChildSupport.java,
	java/beans/beancontext/BeanContextMembershipEvent.java:
	Reordered import statements and removed redundant modifiers.

2004-09-29  Tom Tromey  <tromey@redhat.com>

	PR libgcj/17715:
	* Makefile.in: Rebuilt.
	* Makefile.am (libgcj-@gcc_version@.jar): Include properties
	files.
	(all_property_files): New macro.

	* Makefile.in: Rebuilt.
	* Makefile.am (ordinary_java_source_files): Re-sorted.
	(libgcj.la): Moved to old location near lib-gnu-awt-xlib.la.

2004-09-28  Tom Tromey  <tromey@redhat.com>

	* jni.cc (_Jv_JNI_RegisterNatives): Formatting fixlets.

	PR libgcj/17222:
	* Makefile.am (libgcj.la): Restored.
	* Makefile.in: Rebuilt.

2004-09-28  Michael Koch  <konqueror@gmx.de>

	* java/net/URLConnection.java: Reformatted.
	* java/net/URLClassLoader.java: Reformatted.